env파일비공개

--- a/frontend/src/room.html
+++ b/frontend/src/room.html
@@ -43,7 +43,7 @@
             <section id="members__container">
 
             <div id="members__header">
-                <p>참여자</p>
+                <p>참여자 목록</p>
                 <strong id="members__count">0</strong>
             </div>
 
